# harness-agent

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  cli.py  harness.yaml.example  hello.txt  pyproject.toml  pyrightconfig.json
.github/workflows/: test.yml
docs/: system-and-development-rules.md
docs/tasks/: enhanced-memory.md  event-driven-compaction.md  fix-tools.md
src/harness_agent/: __init__.py  app.py  browser_use.py  bus.py  compaction.py  config.py  content.py  context.py  db.py  events.py  handlers.py  identity.py  image_generate.py  image_jobs.py  llm.py  llm_audit.py  mcp.py  mcp_models.py  memory.py  memory_review.py  memory_service.py  projections.py  runtime.py  scheduler.py  session_log.py  session_search_service.py  store.py  subagents.py  tasks.py  text.py  tool_call_results.py  tool_call_waiter.py  tool_executor.py  tool_image_handlers.py  tool_schedule_handlers.py  tool_sub_agent_handlers.py  tool_task_handlers.py  tools.py  turn_runner.py  turns.py  (+1 more)
tests/: conftest.py  test_agent_flow.py  test_all_tool_handlers.py  test_browser_use.py  test_browser_use_integration.py  test_compaction.py  test_docker_runner.py  test_e2e_docker_features.py  test_eventful_spawned_store.py  test_image_tools.py  test_infrastructure_boundaries.py  test_llm_respond_text.py  test_mcp_global.py  test_mcp_session.py  test_media_and_scheduler.py  test_memory.py  test_memory_plumbing.py  test_memory_review.py  test_openai_compatible_adapter.py  test_real_e2e_cli.py  test_send_cli_once.py  test_session_search.py  test_spawned_process_scripts.py  test_subagents.py  test_telegram_ingestion.py  test_tool_surface.py
(+49 files in other folders)
