[project]
name = "harness-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "John Doe", email = "john.doe@example.com" }
]
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.28.2",
    "aiosqlite>=0.22.1",
    "croniter>=6.2.2",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "openai>=2.37.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyyaml>=6.0.3",
]

[project.scripts]
harness-agent = "harness_agent:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
