[project]
name = "harness-agent"
version = "0.1.0"
description = "Async LLM agent harness: typed events, SQLite persistence, Telegram/CLI adapters, per-user Docker workspaces."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.28.2",
    "aiosqlite>=0.22.1",
    "beautifulsoup4>=4.12.3",
    "croniter>=6.2.2",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "markdownify>=0.13.1",
    "openai>=2.37.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyyaml>=6.0.3",
    "tiktoken>=0.13.0",
]

[project.scripts]
harness-agent = "harness_agent:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["integration"]
